Ajuste de estilos para segundo tema

--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -10,12 +10,15 @@ $light-grey: #d7d8d8;
 $almost-black: #050505;
 $red: #d0021b;
 
+html {
+  font-size: 100%;
+}
 body {
   padding-top: 50px;
 }
 
 p {
-  color: $text-color;
+  color: darken($text-color, 30% );
   font-family: 'Oswald', sans-serif;
   font-weight: 300;
 }
@@ -25,67 +28,35 @@ p {
   text-align: center;
 }
 
-// navbar
-.navbar {
-  background: $main-color!important;
-  border-bottom: 3px solid $red;
-}
-
-.navbar .navbar-nav {
-  display: inline-block;
-  float: none;
-  margin-bottom: -10px;
-}
-
-.navbar .navbar-collapse {
-  text-align: center;
-}
-
-.navbar-toggle .icon-bar{
-  background: $red;
-}
-
-#main-menu a {
-  bottom: 3px;
-  color: black;
-  font-family: 'Oswald', sans-serif;
-  font-size: 1.125em;
-  padding: 2.5em 15px;
-}
-
-#main-menu .nav > li > a:hover {
-  background-color: darken($main-color, 25%);
-  color: $almost-white;
-}
-
-//header
-.image-bg-fluid-height {
-  background: url('../img/background.jpg') no-repeat center center scroll;
-  background-size: cover;
-  padding: 20.75em 0 16.25em 0;
-  height: 100vh;
-
-  h1 {
-    color: $almost-white;
-    font-family: 'Oswald', sans-serif;
-    font-size: 2.5em;
-    font-weight: 300;
-    line-height: 1.75em;
-  }
-}
-
-//white-block
 .white-block {
   margin: 5.313em 0;
 
+  @media portrait and (max-width:767px) {
+    margin: 2.625em 0;
+  }
+
+  ul, ol {
+    margin: 0!important;
+  }
+
   h2 {
     border-bottom: solid 1px $red;
+    color: $almost-black;
     font-family: 'Oswald', sans-serif;
     font-size: 2.250em;
     font-weight: 300;
     margin-bottom: 0.938em;
     padding-bottom: 1.250em;
     text-align: center;
+    @media portrait and (max-width:767px) {
+      padding-bottom: 0.938em;
+    }
+  }
+
+  h3 {
+    font-family: 'Oswald', sans-serif;
+    font-size: 1.500em;
+    font-weight: 300;
   }
 
   h4 {
@@ -94,27 +65,70 @@ p {
     font-size: 1.25em;
   }
 
+  a {
+    color: $main-color;
+  }
+
+  a:hover, a:visited {
+    color: darken($main-color, 25%);
+  }
+
   li {
     list-style: none;
   }
 
+  .post-list {
+    margin-bottom: 2.5em;
+    padding-bottom: 2em;
+    border-bottom: 1px solid $light-grey;
+    @media portrait and (max-width:767px) {
+      margin-bottom: 1.875em;
+    }
+
+    a{
+      color: $almost-black;
+    }
+  }
+
+  .post-date {
+    color: $text-color;
+    display: block;
+    font-family: 'Oswald', sans-serif;
+    font-size: 0.875em;
+    font-weight: 300;
+    margin-bottom: 0.938em;
+  }
+
+  .post-title {
+    color: $almost-black;
+    font-family: 'Oswald', sans-serif;
+    font-size: 1.500em;
+    font-weight: 300;
+  }
 }
 
 .white-block-bis {
   margin: 5.313em 0 0 0;
+  @media portrait and (max-width:767px) {
+    margin: 2.625em 0 0 0;
+  }
 
   h2 {
     border-bottom: solid 1px $red;
+    color: $almost-black;
     font-family: 'Oswald', sans-serif;
     font-size: 2.250em;
     font-weight: 300;
     margin-bottom: 0.938em;
     padding-bottom: 1.250em;
     text-align: center;
+    @media portrait and (max-width:767px) {
+      padding-bottom: 0.938em;
+    }
   }
 
   h4 {
-    /*color: $main-color;*/
+    color: $almost-black;
     font-family: 'Oswald', sans-serif;
     font-size: 1.25em;
   }
@@ -130,6 +144,9 @@ p {
 
 .grey-block {
   margin: 5.313em 0 0 0;
+  @media portrait and (max-width:767px) {
+    margin: 2.625em 0 0 0;
+  }
 
   h2 {
     border-bottom: solid 1px $light-grey;
@@ -140,6 +157,9 @@ p {
     margin-bottom: 0.938em;
     padding-bottom: 1.250em;
     text-align: center;
+    @media portrait and (max-width:767px) {
+      padding-bottom: 0.938em;
+    }
   }
 
   h3 {
@@ -149,6 +169,11 @@ p {
     font-weight: 300;
     padding-bottom: 1.250em;
     text-align: center;
+    @media portrait and (max-width:767px) { padding-bottom: 0;}
+    @media(min-width:768px){}
+    @media(min-width:992px){}
+    @media(min-width:1200px){}
+
   }
 
   p {
@@ -161,121 +186,144 @@ p {
 
 }
 
-//premios
 .main-color-background {
-  background-color: $red;
+  background-color: $main-color;
 }
 
 .main-color-block {
-  margin: 5.313em 0;
-  border-bottom: 3px solid $red;
+  margin: 5.313em 0 0 0;
+  @media portrait and (max-width:767px) {
+    margin: 2.625em 0 0 0;
+  }
 
   h2 {
-    color: white;
+    color: $almost-black;
     font-family: 'Oswald', sans-serif;
     font-size: 2.250em;
     font-weight: 300;
+    margin-bottom: 0;
+    padding-bottom: 1.5em;
     text-align: center;
+    @media portrait and (max-width:767px) {
+      padding-bottom: 0.938em;
+    }
+  }
+
+  .border-title {
+    border-bottom: solid 1px $red;
+    margin-bottom: 0.938em;
+  }
+
+  h3 {
+    color: $text-color;
+    font-family: 'Oswald', sans-serif;
+    font-size: 2.250em;
+    font-weight: 300;
+    padding-bottom: 1.250em;
+    text-align: center;
+    @media portrait and (max-width:767px) {
+      padding-bottom: 0;
+    }
   }
 
   p {
-    color: $text-color;
+    color: darken($text-color, 30% );
+  }
+
+  ul {
+    margin-left: 0;
+    margin-bottom: 0!important;
+  }
+
+  li {
+    list-style: none;
   }
 
   .map {
-    width: 100%;
     height: 31.250em;
+    margin-bottom: 5.313em;
+    width: 100%;
+    @media portrait and (max-width:767px) {
+      margin-bottom: 2.625em;
+    }
   }
-
 }
 
-.award{
-  margin: 0;
-  padding: 0;
+.award {
+  margin: 0!important;
+  padding: 0!important;
 
-  figure{
+  figure {
     display: block;
     margin: 0;
 
-    img{
+    img {
       width: 100%;
     }
   }
 
-  figcaption{
+  figcaption {
     background: rgba(255,255,255,0.8);
     bottom: 0;
     padding: 3rem;
     position: absolute;
     width: 100%;
 
-    h4{
+    h4 {
       color: $almost-black;
       font-family: 'Oswald', sans-serif;
       margin: 0;
       padding: 0;
     }
 
-    p{
+    p {
       color: $almost-black;
     }
   }
+}
+
+.winners-background {
+  background-color: $red;
+
+  .main-color-block{
+
+    h2{
+      color: $main-color;
+    }
+  }
+
 }
 
 .black-background {
   background-color: $main-color;
-}
-
-.footer-block {
-  margin: 5.313em 0;
-
-  .footer-list {
-    margin-left: 0;
-
-    li {
-      color: $almost-black;
-      font-family: 'Oswald', sans-serif;
-      font-size: 1.313em;
-      list-style: none;
-      margin-bottom: 0.938em;
-
-      a {
-        color: $almost-black;
-        text-decoration: underline;
-      }
-    }
-
-    p {
-      color: $almost-black;
-      font-size: 1em;
-      margin-left: 0.938em;
-    }
-    a {
-      color: $almost-black;
-      text-decoration: underline;
-    }
-  }
-
-  .footer-icons {
-    display: inline;
-    float: left;
-
-    li {
-      float: left;
-      list-style: none;
-      padding-right: 1em;
-    }
-
-    img {
-      width: 1.875em;
-    }
-  }
+  border-top: 3px solid $red;
 }
 
 .extra-margin {
   margin-bottom: 3.750em;
+  @media (max-width: 767px) {
+    margin-bottom: 1.875em;
+  }
 }
+
+.extra-margin-header {
+  margin-top: 9.250em;
+  @media (max-width: 767px) {
+    margin-top: 6em;
+  }
+}
+
+.extra-margin-sides {
+  margin: 0 0.938em;
+  @media (max-width: 767px) {
+    margin: 0;
+  }
+}
+
 .extra-padding {
   padding-bottom: 15px;
 }
 
+.no-margin {
+  margin-left: 0!important;
+}
