--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,15 @@
-<div class="black-background">
+<div class="black-background animated fadeIn wow">
   <div class="container">
     <div class="row footer-block">
-      <div class="col-lg-10 col-lg-offset-1">
+      <div class="col-md-10 col-md-offset-1">
+        {% for footer in site.data.footer %}
         <div class="row">
           <div class="col-md-4">
             <ul class="footer-list">
-              <li><a href="#about">Contacto</a></li>
+              <li><a href="{{ footer.contact-link }}">{{ footer.contact-title }}</a></li>
               <!-- Para el contacto te recomendamos vincular un cuestionario de google forms -->
-              <li>Nombre del organizador</li>
-              <p>Pellen tesque sit amet arcu quis neque faucibus luctus et nec eros. <a href="">Página organizador</a></p>
+              <li>{{ footer.organizer-name }}</li>
+              <p>{{ footer.organizer-text }} <a href="{{ footer.organizer-link }}">{{ footer.organizer-text-title }}</a></p>
             </ul>
 
           </div>
@@ -16,15 +17,14 @@
           </div>
           <div class="col-md-4">
             <ul class="footer-icons">
-              {% for social in site.data.social %}
-                <li><a href="{{ social.twitter }}" target="_blank"><img src="img/icon-twitter.svg" /></a></li>
-                <li><a href="{{ social.facebook }}" target="_blank"><img src="img/icon-facebook.svg" /></a></li>
-                <li><a href="{{ social.instagram }}" target="_blank"><img src="img/icon-instagram.svg" /></a></li>
-                <li><a href="{{ social.linkedin }}" target="_blank"><img src="img/icon-linkedin.svg" /></a></li>
-              {% endfor %}
+              <li><a href="{{ footer.twitter }}"><img src="/img/icon-twitter.svg" /></a></li>
+              <li><a href="{{ footer.facebook }}"><img src="/img/icon-facebook.svg" /></a></li>
+              <li><a href="{{ footer.instagram }}"><img src="/img/icon-instagram.svg" /></a></li>
+              <li><a href="{{ footer.linkedin }}"><img src="/img/icon-linkedin.svg" /></a></li>
             </ul>
           </div>
         </div>
+        {% endfor %}
       </div>
     </div>
   </div>
