--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,22 @@
 ---
 layout: default
+title: Noticias | Hackaton
+description: Noticia relacionadas al hackaton.
+id: Post
 ---
-<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="post-header">
-    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
-  </header>
-
-  <div class="post-content" itemprop="articleBody">
-    {{ content }}
+<div class="container">
+  <div class="row white-block extra-margin-header">
+    <div class="col-lg-10 col-lg-offset-1">
+      <article class="post extra-margin-sides" itemscope itemtype="http://schema.org/BlogPosting">
+        <header class="post-header">
+          <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
+          <p class="post-date"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+        </header>
+        <div class="post-content" itemprop="articleBody">
+          {{ content }}
+        </div>
+      </article>
+    </div>
   </div>
-
-</article>
+</div>
