--- a/css/main.scss
+++ b/css/main.scss
@@ -3,9 +3,11 @@
 ---
 @charset "utf-8";
 
-@import "bootstrap";
 @import "site";
-
+@import "header";
+@import "footer";
+@import "bootstrap";
+@import "animate";
 
 // Our variables
 $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
