--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -3,10 +3,9 @@
 
 // Hackatones variables
 $main-color: #d0021b;
-$title-color: #393c3e;
+$secondary-color: #a7a9ac;
 $text-color: #a7a9ac;
 $almost-white: #f2f2f2;
-$light-grey: #d7d8d8;
 $almost-black: #050505;
 
 html {
@@ -87,7 +86,7 @@ p {
   .post-list {
     margin-bottom: 2.5em;
     padding-bottom: 2em;
-    border-bottom: 1px solid $light-grey;
+    border-bottom: 1px solid lighten($secondary-color, 50%);
     @media portrait and (max-width:767px) {
       margin-bottom: 1.875em;
     }
@@ -176,18 +175,18 @@ p {
   }
 }
 
-.grey-background {
-  background-color: $text-color;
+.secondary-color-background {
+  background-color: $secondary-color;
 }
 
-.grey-block {
+.secondary-color-block, .grey-block {
   margin: 5.313em 0 0 0;
   @media portrait and (max-width:767px) {
     margin: 2.625em 0 0 0;
   }
 
   h2 {
-    border-bottom: solid 1px $light-grey;
+    border-bottom: solid 1px lighten($secondary-color, 50%);
     color: white;
     font-family: 'Oswald', sans-serif;
     font-size: 2.250em;
