--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,6 +17,13 @@ id: Post
           {{ content }}
         </div>
       </article>
+      <article class="extra-margin-sides">
+      {% include facebook-init.html %}
+      {% if site.fbcomments %}
+        <h3>Comentarios</h3>
+        <div class="fb-comments" data-href="{{ site.url }}{{ page.url }}" data-width="500px" data-numposts="10"></div>
+      {% endif %}
+      </article>
     </div>
   </div>
 </div>
